# raman-qc

./: .gitignore  README.md  metadata.py  profile.py  pyproject.toml  requirements.txt  spectrum.py
src/: core_structure.py  measurement.py  metadata.py  profile.py  spatial_profile.py  spectrum.py
src/ramanqc/: core_structure.py  measurement.py  metadata.py  spatial_profile.py  spatial_profile_v2.py  spectrum.py
src/rapidqc/: cli.py  core_structure.py  measurement.py  spectrum.py  version.py
src/rapidqc/core/: metrics.py  reader.py  report.py  results.py
src/rapidqc/core/containers/: measurement.py  spatial_profile.py  spectrum.py
src/rapidqc/preprocessing/: operator.py
src/rapidqc/utils/: fileio.py  logging.py  plotting.py
tests/: test_measurement.py  test_metadata.py  test_spatial_profile.py  test_spectrum.py
tests/containers/: test_measurement.py  test_metadata.py  test_spatial_profile.py  test_spectrum.py
