[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-qc"
version = "0.1.0"
description = "Pre-processing optimisation for biological Raman data"
readme = "README.md"
license = {text = "University of Southampton"}
authors = [
    { name = "Yetiki", email = "yoshiki.cook@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    # List runtime dependencies here, e.g. "requests>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
