[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RapidQC"
version = "0.1.0"
description = "A FastQC-like quality control toolkit"
readme = "README.md"
authors = [
    { name = "Yetiki", email = "yoshiki.cook@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    # List runtime dependencies here, e.g. "requests>=2.0"
]

[project.scripts]
rapidqc = "rapidqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
